--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["node", "vite/client"],
+    "types": ["node", "vite/client", "@types/jest"],
   },
   "include": [
     "src",
