--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
 	"dependencies": {
 		"primeicons": "6.0.1",
 		"primereact": "10.2.1",
-		"rambdax": "^10.1.0",
+		"rambdax": "10.1.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"string-fn": "3.1.0",
 		"styled-components": "6.1.3",
 		"styled-icons": "10.47.0"
 	},
