--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["node", "vite/client", "@types/jest"],
+    "types": ["node", "vite/client", "jest"],
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": [
     "src",
