--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+build/index.html
+build/assets/index-tnqnbyOK.js
+build/assets/index-VslkuDhH.css
